[package]
authors = ["kaito2 <kaito.iwatsuki@nislab.doshisha.ac.jp>"]
edition = "2018"
name = "rucker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network_bridge = "0.1.1"
ipnetwork = "0.16.0"
rtnetlink = "0.3.0"
tokio = { version = "0.2.21", features = ["full"]}
futures = "0.3.5"